# liteamp

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  acinclude.m4  autogen.sh  configure.in  liteamp.spec.in
data/: Makefile.am  liteamp.applications  liteamp.desktop
data/glade/: liteamp-ui.xml  liteamp-window.glade  location-dialog.glade  playlist-dialog.glade  prefs-dialog.glade  track-dialog.glade
data/pixmaps/: .cvsignore  Makefile.am
data/ui/: Makefile.am
debian/: Makefile.am  changelog  control  copyright  menu  rules
doc/: Makefile.am  liteamp.1
po/: .cvsignore  POTFILES.in  ko.po  liteamp.pot
src/: .cvsignore  Makefile.am  about-dialog.c  about-dialog.h  action.c  action.h  callbacks.c  callbacks.h  decoder.c  decoder.h  dnd.c  dnd.h  eggtrayicon.c  eggtrayicon.h  input.c  input.h  la-codeset.c  la-codeset.h  la-iter.c  la-iter.h  la-playlist.c  la-playlist.h  la-track-column.c  la-track-column.h  la-track.c  la-track.h  la-tracks-iter.c  la-tracks-iter.h  la-tracks-store.c  la-tracks-store.h  liteamp.c  liteamp.h  location-dialog.c  location-dialog.h  mad-decoder.c  mad-decoder.h  main.c  mime.c  mime.h  mixer.c  (+32 more)
src/effect/: Makefile.am  echo.c  echo.h  effect.c  effect.h  eq.c  eq.h  normal.c  normal.h  stereo.c  stereo.h  voice.c  voice.h
