NULL =

pixmaps_DATA = \
    add-directory.png \
    add-file.png \
    add-location.png \
    add-playlist.png \
    back.png \
    forward.png \
    liteamp-logo.png \
    liteamp.png \
    mute.png \
    next.png \
    pause.png \
    playlist.png \
    previous.png \
    remove-playlist.png \
    repeat.png \
    shuffle.png \
    start.png \
    stop.png \
    volume-down.png \
    volume-hi.png \
    volume-lo.png \
    volume-up.png \
    volume.png \
    $(NULL)

pixmapsdir = $(pkgdatadir)/pixmaps

EXTRA_DIST = $(pixmaps_DATA)
